# libtex2omml

./: CMakeLists.txt  README.md  unimathsymbols.txt
src/: CMakeLists.txt  defs.h  functions.c  functions.h  html2xml.c  html2xml.h  mathsymbol.c  mathsymbol.h  tex2omml.c  tex2omml.h
tests/: functions.c  html2xml.c  mathsymbol.c  mml2omml.c  tex2mml.c  tex2omml.c
